<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    android:gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/labelCharacterBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/label_character_bio"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_resource_box"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:text="@string/label_character_name"
                />

            <TextView
                android:id="@+id/txtCharacterName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:layout_weight="1"
                android:text="@string/sample_character_name"
                android:textAlignment="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:text="@string/label_character_player"
                />

            <TextView
                android:id="@+id/txtCharacterPlayer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:layout_weight="1"
                android:text="@string/sample_character_player"
                android:textAlignment="center"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>